--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -174,13 +174,13 @@ $switchwidth: 530px;
 #gif1{
     padding-top: 0;
     margin-top: 0;
-    @media screen and (max-width: 450px) {
-        width: 150px;
+    @media screen and (max-width: 550px) {
+        width: 60vw;
     }
-    @media  screen and (max-width: 650px)  {
-        width: 250px;
+    @media screen and (min-width: 551px) and (max-width: 799px) {
+        width: 40vw;
     }
-    @media  screen and (min-width: 650px) {
+    @media  screen and (min-width: 800px) {
         width: 340px;
     }
 }
