--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -26,8 +26,10 @@ body {
     position: sticky;
     display: flex;
     padding: 8px;
+    padding-left: 0px;
     user-select: none;
     z-index: 2;
+    width: 105vw;
 }
 .navIcons{
     @media screen and (max-width: 450px) {
@@ -312,11 +314,31 @@ $switchwidth: 530px;
 .langDropdownMenu {
     position: relative;
     display: inline-block;
-    margin: 30px;
+    margin: 0.5rem;
     padding-top: 11px;
     padding-bottom: 5px;
     padding-left: 8px;
-    border: 6px solid $approve;
+    border: 4px solid $approve;
+}
+#nav-lang-label{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: $approve;
+    margin: 0;
+    @media screen and (max-width: 450px) {
+        font-size: 0.8rem;
+        
+    }
+}
+#nav-label-icon{
+    margin: 0;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    @media screen and (max-width: 450px) {
+        width: 20px;
+        height: 20px;
+    }
 }
 
 .dropdownCheckbox {
@@ -355,6 +377,7 @@ $switchwidth: 530px;
 .horizontal-fill{
     flex: 1;
 }
+$navTextSize-mid: 2.1rem;
 #navText{
     //change the textsize
     font-size: 3.3rem;
@@ -362,17 +385,17 @@ $switchwidth: 530px;
     margin: auto;
     user-select: none;
 
-    @media  screen and (max-width: 600px) and (max-width: 850px) {
-        font-size: 2.5rem;
+    @media  screen and (min-width: 600px) and (max-width: 850px) {
+        font-size: $navTextSize-mid;
         
     }
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 599px) {
         display:none;
     }
 }
 .NavFont{
 
-    font-size: 3.3rem;
+    font-size: 3.0rem;
     font-weight: bold;
     margin: auto;
     user-select: none;
@@ -384,13 +407,18 @@ $switchwidth: 530px;
         color: $background;
     }
 
-    @media  screen and (max-width: 600px) and (max-width: 850px) {
-        font-size: 2.5rem;
+    @media  screen and (min-width: 600px) and (max-width: 850px) {
+        font-size: $navTextSize-mid;
         
     }
-    @media screen and (max-width: 400px) {
-        font-size: 1.4rem;
+    @media screen and (min-width: 481px) and (max-width: 599px) {
+        font-size: 2.8rem;
     }
+    @media screen and (max-width: 480px) {
+        font-size: 1.8rem;
+        
+    }
+
 }
 .footer_box{
     color: $approve;
