--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -29,7 +29,6 @@ body {
     padding-left: 0px;
     user-select: none;
     z-index: 2;
-    width: 105vw;
 }
 .navIcons{
     @media screen and (max-width: 450px) {
@@ -376,6 +375,7 @@ $switchwidth: 530px;
 }
 .horizontal-fill{
     flex: 1;
+    width: calc(100% - 15px);
 }
 $navTextSize-mid: 2.1rem;
 #navText{
