chore: Add functionality to delete text in LingApiController for CRUD operations

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -828,6 +828,18 @@ $iconSize: 4rem; //gehört zu IconSize
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
 }
+#deleteModal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: calc(39vh - 105px);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
 .modal-content{
     background-color: $background10;
     margin: auto;
