Refactor text carousel and herotitle styling in main.scss and welcome.blade.php

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -142,6 +142,11 @@ $switchwidth: 530px;
 .font-color-main{
     color: $contrast;
 }
+.text-carousel-welcome{
+    padding: 10px 13%;
+    text-align: center;
+    color: $background10;
+}
 
 //for the carousel of the new Landing Page 30.Aug 2024
 .heroFontSection{
